# spck

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  README.md  Spck.sln  build.sh  conanfile.txt  install.sh  premake5.lua  run.sh  spck.sh
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: Sandbox.cpp
Spck/: CMakeLists.txt  Spck.vcxproj  Spck.vcxproj.filters
Spck/src/: Spck.h
Spck/src/Spck/: API.h  Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Spck/src/Spck/Messaging/: ApplicationEvent.h  Event.h  KeyEvent.h
Spck/src/Spck/Window/: Window.cpp  Window.h
doc/: code_style.hpp
doc/architecture_planning/: app  engine  scene  shader
doc/architecture_planning/ecs/: mesh_renderer  mesh_renderer_system
src/: CMakeLists.txt
src/sandbox/: CMakeLists.txt  main.cpp  sandbox.hpp
src/spck/: CMakeLists.txt
src/spck-test/: CMakeLists.txt  basic_test.cpp  noncopyable.cpp
src/spck/spck/: api.hpp  application.cpp  application.hpp  log.hpp  spck.hpp  utils.hpp
src/spck/spck/messaging/: application_event.hpp  event.hpp  key_event.hpp
src/spck/spck/renderer/: command.cpp  command.hpp  graphics_context.h  graphics_context.hpp  index_buffer.hpp  renderer.hpp  shader.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
src/spck/spck/renderer/backend/: opengl.hpp
src/spck/spck/renderer/command/: command.hpp  draw_indexed_command.hpp  standard_command_queue.hpp
src/spck/spck/utils/: noncopyable.hpp
src/spck/spck/window/: window.cpp  window.hpp
(+9 files in other folders)
